hphp/test/zend/good/ext/xml/tests/bug25666.php.skipif
<?php
require_once("skipif.inc");
if (! @xml_parser_create_ns('ISO-8859-1')) { die("skip xml_parser_create_ns is not supported on this platform");}
?>